--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "css": "^3.0.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
